[gd_scene load_steps=9 format=2]

[ext_resource path="res://Sprites/Menus/7-2.png" type="Texture2D" id=1]
[ext_resource path="res://Sprites/Menus/7-1.png" type="Texture2D" id=2]
[ext_resource path="res://Sprites/Menus/2-3.png" type="Texture2D" id=3]
[ext_resource path="res://Scripts/MenuInicio.gd" type="Script" id=4]
[ext_resource path="res://Fonts/new_dynamicfont.tres" type="FontFile" id=5]
[ext_resource path="res://Sprites/Menus/cave.jpg" type="Texture2D" id=7]
[ext_resource path="res://Sprites/Menus/new_theme.tres" type="Theme" id=8]
[ext_resource path="res://Sprites/Menus/7-3.png" type="Texture2D" id=9]

[node name="MenuInicio" type="Control"]
process_mode = 3
anchor_left = -0.514
anchor_top = -0.503
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 2.33594
offset_top = -14.2
offset_right = 1.99994
offset_bottom = -9.00003
scale = Vector2( 0.8, 0.8 )
pivot_offset = Vector2( 524, 315 )
theme = ExtResource( 8 )
script = ExtResource( 4 )

[node name="Cave" type="Sprite2D" parent="."]
position = Vector2( 555.25, 341.25 )
scale = Vector2( 1, 0.8 )
texture = ExtResource( 7 )

[node name="Contenedor" type="Sprite2D" parent="."]
position = Vector2( 534.25, 362.875 )
scale = Vector2( 1.058, 1.1835 )
texture = ExtResource( 3 )

[node name="Titulo" type="Label" parent="Contenedor"]
modulate = Color( 1, 0.960784, 0, 1 )
offset_left = -165.0
offset_top = -257.461
offset_right = 179.0
offset_bottom = -181.461
theme_override_fonts/font = ExtResource( 5 )
text = "Dwarf Diggers"
align = 1
valign = 1
autowrap = true
uppercase = true

[node name="BotonInvitado" type="TextureButton" parent="Contenedor"]
offset_left = -87.0
offset_top = -112.576
offset_right = 96.0001
offset_bottom = -72.5758
pivot_offset = Vector2( -498.75, -35 )
texture_normal = ExtResource( 2 )
texture_disabled = ExtResource( 9 )
texture_focused = ExtResource( 1 )

[node name="Etiqueta" type="Label" parent="Contenedor/BotonInvitado"]
anchor_right = 0.972
anchor_bottom = 1.0
offset_top = 0.25
offset_right = 7.03999
offset_bottom = -4.75
text = "Invitado"
align = 1
valign = 1

[node name="BotonIniciar" type="TextureButton" parent="Contenedor"]
offset_left = -87.0
offset_top = -206.274
offset_right = 93.0
offset_bottom = -166.274
texture_normal = ExtResource( 2 )
texture_disabled = ExtResource( 9 )
texture_focused = ExtResource( 1 )

[node name="EtiquetaBoton" type="Label" parent="Contenedor/BotonIniciar"]
anchor_right = 0.972
anchor_bottom = 1.0
offset_top = -1.0
offset_right = 7.03999
offset_bottom = -6.0
text = "Nueva Partida"
align = 1
valign = 1

[node name="BotonCerrar" type="TextureButton" parent="Contenedor"]
anchor_left = 0.5
anchor_right = 0.5
offset_left = -212.0
offset_top = 60.006
offset_right = -32.0
offset_bottom = 100.006
texture_normal = ExtResource( 2 )
texture_disabled = ExtResource( 9 )
texture_focused = ExtResource( 1 )

[node name="Label" type="Label" parent="Contenedor/BotonCerrar"]
offset_top = 1.25
offset_right = 176.0
offset_bottom = 33.25
focus_neighbor_top = NodePath("../../btnOpciones")
text = "Cerrar Juego"
align = 1
valign = 1

[node name="multijugador" type="TextureButton" parent="Contenedor"]
anchor_left = 0.5
anchor_right = 0.5
offset_left = -212.0
offset_top = 104.246
offset_right = -32.0
offset_bottom = 144.246
texture_normal = ExtResource( 2 )
texture_disabled = ExtResource( 9 )
texture_focused = ExtResource( 1 )

[node name="Label" type="Label" parent="Contenedor/multijugador"]
offset_top = 1.25
offset_right = 176.0
offset_bottom = 33.25
focus_neighbor_top = NodePath("../../btnOpciones")
text = "Multijugador"
align = 1
valign = 1

[node name="btnIniciarSesion" type="TextureButton" parent="Contenedor"]
offset_left = -87.0
offset_top = -22.795
offset_right = 93.0
offset_bottom = 17.2051
texture_normal = ExtResource( 2 )
texture_focused = ExtResource( 1 )

[node name="Label" type="Label" parent="Contenedor/btnIniciarSesion"]
offset_left = 5.0
offset_top = 5.0
offset_right = 177.0
offset_bottom = 29.0
focus_neighbor_top = NodePath("../../BotonIniciar")
focus_neighbor_bottom = NodePath("../../btnOpciones")
text = "Iniciar Sesion"
align = 1
valign = 1
autowrap = true

[node name="btnOpciones" type="TextureButton" parent="Contenedor"]
offset_left = -87.0
offset_top = 19.851
offset_right = 93.0
offset_bottom = 59.851
texture_normal = ExtResource( 2 )
texture_disabled = ExtResource( 9 )
texture_focused = ExtResource( 1 )

[node name="Label" type="Label" parent="Contenedor/btnOpciones"]
offset_right = 179.0
offset_bottom = 34.0
focus_neighbor_top = NodePath("../../btnIniciarSesion")
focus_neighbor_bottom = NodePath("../../BotonCerrar")
text = "Opciones"
align = 1
valign = 1
autowrap = true

[node name="Avisos" type="Label" parent="Contenedor"]
anchor_left = 0.006
anchor_top = 1.426
anchor_right = 0.006
anchor_bottom = 1.426
offset_left = -105.75
offset_top = -570.93
offset_right = 99.2501
offset_bottom = -514.93
align = 1
valign = 1
autowrap = true

[node name="Mejoras" type="TextureButton" parent="Contenedor"]
offset_left = -87.0
offset_top = -68.076
offset_right = 93.0
offset_bottom = -28.076
texture_normal = ExtResource( 2 )
texture_disabled = ExtResource( 9 )
texture_focused = ExtResource( 1 )

[node name="Label" type="Label" parent="Contenedor/Mejoras"]
offset_left = 1.24999
offset_top = 1.25
offset_right = 179.25
offset_bottom = 33.25
text = "Mejoras"
align = 1
valign = 1

[node name="BotonCargar" type="TextureButton" parent="Contenedor"]
offset_left = -87.0
offset_top = -158.745
offset_right = 93.0
offset_bottom = -118.745
texture_normal = ExtResource( 2 )
texture_disabled = ExtResource( 9 )
texture_focused = ExtResource( 1 )

[node name="EtiquetaBoton" type="Label" parent="Contenedor/BotonCargar"]
anchor_right = 0.972
anchor_bottom = 1.0
offset_top = -1.0
offset_right = 7.03999
offset_bottom = -6.0
text = "Cargar Partida"
align = 1
valign = 1

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 526.5, 338.75 )
current = true
zoom = Vector2( 0.75, 0.9 )

[connection signal="focus_entered" from="Contenedor/BotonInvitado" to="." method="_on_BotonInvitado_focus_entered"]
[connection signal="mouse_entered" from="Contenedor/BotonInvitado" to="." method="_on_BotonInvitado_mouse_entered"]
[connection signal="pressed" from="Contenedor/BotonInvitado" to="." method="_on_BotonInvitado_pressed"]
[connection signal="focus_entered" from="Contenedor/BotonIniciar" to="." method="_on_BotonIniciar_focus_entered"]
[connection signal="mouse_entered" from="Contenedor/BotonIniciar" to="." method="_on_BotonIniciar_mouse_entered"]
[connection signal="pressed" from="Contenedor/BotonIniciar" to="." method="_on_BotonIniciar_pressed"]
[connection signal="focus_entered" from="Contenedor/BotonCerrar" to="." method="_on_BotonCerrar_focus_entered"]
[connection signal="mouse_entered" from="Contenedor/BotonCerrar" to="." method="_on_BotonCerrar_mouse_entered"]
[connection signal="pressed" from="Contenedor/BotonCerrar" to="." method="_on_BotonCerrar_pressed"]
[connection signal="focus_entered" from="Contenedor/multijugador" to="." method="_on_BotonCerrar_focus_entered"]
[connection signal="mouse_entered" from="Contenedor/multijugador" to="." method="_on_BotonCerrar_mouse_entered"]
[connection signal="pressed" from="Contenedor/multijugador" to="." method="_on_multijugador_pressed"]
[connection signal="focus_entered" from="Contenedor/btnIniciarSesion" to="." method="_on_btnIniciarSesion_focus_entered"]
[connection signal="mouse_entered" from="Contenedor/btnIniciarSesion" to="." method="_on_btnIniciarSesion_mouse_entered"]
[connection signal="pressed" from="Contenedor/btnIniciarSesion" to="." method="_on_btnIniciarSesion_pressed"]
[connection signal="focus_entered" from="Contenedor/btnOpciones" to="." method="_on_btnOpciones_focus_entered"]
[connection signal="mouse_entered" from="Contenedor/btnOpciones" to="." method="_on_btnOpciones_mouse_entered"]
[connection signal="pressed" from="Contenedor/btnOpciones" to="." method="_on_btnOpciones_pressed"]
[connection signal="focus_entered" from="Contenedor/Mejoras" to="." method="_on_Mejoras_focus_entered"]
[connection signal="mouse_entered" from="Contenedor/Mejoras" to="." method="_on_Mejoras_mouse_entered"]
[connection signal="pressed" from="Contenedor/Mejoras" to="." method="_on_Mejoras_pressed"]
[connection signal="focus_entered" from="Contenedor/BotonCargar" to="." method="_on_BotonCargar_focus_entered"]
[connection signal="mouse_entered" from="Contenedor/BotonCargar" to="." method="_on_BotonCargar_mouse_entered"]
[connection signal="pressed" from="Contenedor/BotonCargar" to="." method="_on_BotonCargar_pressed"]
